<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Book</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wheel">Steering Wheel</string>
    <string name="ground">The Ground</string>
    <string name="window">Window Frame</string>
    <string name="sun">The Sun</string>
    <string name="cloud">A Cloud</string>
    <string name="book_title">Title of Book</string>
    <string name="by">by</string>
    <string name="mike">Michael Herrera</string>
    <string name="joe">Josef Nosof</string>
    <string name="dima">Dima Nosof</string>
    <string name="body">Body</string>
    <string name="moon">Moon</string>

</resources>
